fix: -added ProfilePic -added introductory text -added linkedin URL

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -50,6 +50,7 @@ header {
         display: block;
         margin: 0 auto 24px;
         border-radius: 50%;
+        max-height: 120px
     }
 }
 
